[gd_scene load_steps=11 format=3 uid="uid://du8nd6q2jlyde"]

[ext_resource type="Script" path="res://Scripts/action_tooltip.gd" id="1_fqnfv"]
[ext_resource type="Texture2D" uid="uid://cijyicf1fbewn" path="res://Assets/aaaps/weapons_hook_normal.png" id="2_dpdx6"]
[ext_resource type="Texture2D" uid="uid://cnqrp2in5uqq5" path="res://Assets/aaaps/weapons_hook_pressed.png" id="3_oumy7"]
[ext_resource type="Texture2D" uid="uid://7nscq1hyfknr" path="res://Assets/aaaps/weapons_hook_hover.png" id="4_lyobs"]
[ext_resource type="Texture2D" uid="uid://bjnj0l8r4efkn" path="res://Assets/aaaps/button.png" id="5_2tcpw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_110sr"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0.165274, 0.38386, 0.690155, 0.823529)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.0745098, 0.215686, 0.411765, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="AtlasTexture" id="AtlasTexture_t4atw"]
atlas = ExtResource("5_2tcpw")
region = Rect2(0, 0, 248, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_map64"]
atlas = ExtResource("5_2tcpw")
region = Rect2(0, 78, 248, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lipi"]
atlas = ExtResource("5_2tcpw")
region = Rect2(0, 156, 248, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_5l111"]
atlas = ExtResource("5_2tcpw")
region = Rect2(0, 234, 248, 74)

[node name="ActionTooltipX" type="Control"]
top_level = true
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_fqnfv")

[node name="ActionTooltipPanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 408.0
offset_bottom = 231.0
theme_override_styles/panel = SubResource("StyleBoxFlat_110sr")

[node name="ActionTooltipVBoxContainer" type="VBoxContainer" parent="ActionTooltipPanelContainer"]
layout_mode = 2

[node name="Action1HBoxContainer" type="HBoxContainer" parent="ActionTooltipPanelContainer/ActionTooltipVBoxContainer"]
layout_mode = 2

[node name="Action1TextureButton" type="TextureButton" parent="ActionTooltipPanelContainer/ActionTooltipVBoxContainer/Action1HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_dpdx6")
texture_pressed = ExtResource("3_oumy7")
texture_hover = ExtResource("4_lyobs")
ignore_texture_size = true
stretch_mode = 5

[node name="Action1Label" type="Label" parent="ActionTooltipPanelContainer/ActionTooltipVBoxContainer/Action1HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_type_variation = &"TooltipLabel"
text = "ACTION 1: does this and also this and also this and also very long text"
autowrap_mode = 3

[node name="Action2HBoxContainer" type="HBoxContainer" parent="ActionTooltipPanelContainer/ActionTooltipVBoxContainer"]
layout_mode = 2

[node name="Action2TextureButton" type="TextureButton" parent="ActionTooltipPanelContainer/ActionTooltipVBoxContainer/Action2HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_dpdx6")
texture_pressed = ExtResource("3_oumy7")
texture_hover = ExtResource("4_lyobs")
ignore_texture_size = true
stretch_mode = 5

[node name="Action2Label" type="Label" parent="ActionTooltipPanelContainer/ActionTooltipVBoxContainer/Action2HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_type_variation = &"TooltipLabel"
text = "ACTION 2: does this and also this"
autowrap_mode = 3

[node name="BottomVBoxContainer" type="VBoxContainer" parent="ActionTooltipPanelContainer/ActionTooltipVBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="ChangeLabel" type="Label" parent="ActionTooltipPanelContainer/ActionTooltipVBoxContainer/BottomVBoxContainer"]
layout_mode = 2
theme_type_variation = &"TooltipLabel"
theme_override_colors/font_color = Color(1, 0.335514, 0.269596, 1)
text = "DMG: 5 -> 6"
horizontal_alignment = 1

[node name="UpgradeTextureButton" type="TextureButton" parent="ActionTooltipPanelContainer/ActionTooltipVBoxContainer/BottomVBoxContainer"]
custom_minimum_size = Vector2(299, 75)
layout_mode = 2
disabled = true
texture_normal = SubResource("AtlasTexture_t4atw")
texture_pressed = SubResource("AtlasTexture_map64")
texture_hover = SubResource("AtlasTexture_1lipi")
texture_disabled = SubResource("AtlasTexture_5l111")
ignore_texture_size = true
stretch_mode = 5

[node name="UpgradeLabel" type="Label" parent="ActionTooltipPanelContainer/ActionTooltipVBoxContainer/BottomVBoxContainer/UpgradeTextureButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -11.5
offset_right = 90.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"LabelDisabled"
text = "UPGRADE ACTION 1"
vertical_alignment = 1
uppercase = true

[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="toggled" from="ActionTooltipPanelContainer/ActionTooltipVBoxContainer/Action1HBoxContainer/Action1TextureButton" to="." method="_on_action_1_texture_button_toggled"]
[connection signal="toggled" from="ActionTooltipPanelContainer/ActionTooltipVBoxContainer/Action2HBoxContainer/Action2TextureButton" to="." method="_on_action_2_texture_button_toggled"]
[connection signal="pressed" from="ActionTooltipPanelContainer/ActionTooltipVBoxContainer/BottomVBoxContainer/UpgradeTextureButton" to="." method="_on_upgrade_texture_button_pressed"]
